# email-triage-env

./: Dockerfile  README.md  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
