[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv-compatible RL environment for email triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "openai==1.57.2",
    "httpx==0.28.1",
    "pyyaml==6.0.2",
    "python-multipart==0.0.17",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]
