[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv-compatible RL environment for email triage"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "openai>=2.7.2",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.17",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:app"

[project.optional-dependencies]
dev = ["pytest", "httpx"]
